--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ numpy~=1.20.3
 requests~=2.25.1
 opencv-python~=4.5.1.48
 Pillow~=8.2.0
+pytz~=2021.1
+pip~=21.0.1
+setuptools~=53.0.0
+pyTelegramBotAPi~=3.8.3
